# full-stack-app-with-reactjs-nodejs-python-docker

./: Makefile  README.md  docker-compose.yml  monorepo.code-workspace  package.json  pnpm-lock.yaml  turbo.json
apps/server2/: .dockerignore  .env.development  .env.test  .gitignore  Dockerfile.multi-stage  README.md  poe_tasks.toml  pyproject.toml  pytest.ini  ruff.toml
apps/server2/db/migrations/: env.py
apps/server2/db/migrations/versions/: add2100dfabd_.py  af9ba04f9cc4_.py  d5e69511201b_.py
apps/server2/db/models/: default.py  student.py  user.py
apps/server2/scripts/: startup.sh
apps/server2/src/: conftest.py  main.py  server.py  server_error.py
apps/server2/src/api/components/health/: __init__.py  health_check_controller.py  health_check_mapper.py  health_check_service.py
apps/server2/src/api/components/health-check/: health_check_controller.py
apps/server2/src/api/components/health_check/: health_check_controller.py  health_check_mapper.py  health_check_service.py
apps/server2/src/api/routers/: routers.py
apps/server2/src/api/routes/: routes.py
apps/server2/src/api/shared/: api_error_response.py  api_pagination_response.py  dict_to_obj.py
apps/server2/src/api/utils/: api_error_handler.py
apps/server2/src/check/: test_a.py
apps/server2/src/config/: __init__.py  config.py
apps/server2/src/container/: container.py
apps/server2/src/factories/: abs_test_factory.py  db_container_test_factory.py  repository_test_factory.py
apps/server2/src/factories/helpers/: user_factory.py
apps/server2/src/services/: api_pagination_service.py  container_service.py  db_service.py  pagination_service.py
apps/server2/tests/: conftest.py
apps/server2/tests/config/: test_config.py
apps/server2/tests/container/: test_container.py
apps/server2/tests/factories/: user_factory.py
apps/server2/tests/helpers/factories/: user_factory.py
apps/server2/tests/helpers/fixtures/: abs_test_fixture.py  db_container_test_fixture.py  repository_test_fixture.py
apps/server2/tests/services/: test_api_pagination_service.py  test_db_service.py
apps/server2/tests/unit/config/: test_config.py
apps/server2/tests/unit/container/: test_container.py
apps/server2/tests/unit/services/: test_api_pagination_service.py  test_db_service.py
(+251 files in other folders)
