[tool.poetry]
name = "server2"
version = "0.1.0"
description = "Server2 application"
authors = ["Ícaro <icaroribeiro@hotmail.com>"]
license = "ICS"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.29.0"
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
