[tool.poetry]
name = "server2"
version = "0.1.0"
description = "Server2 application"
authors = ["Ícaro <icaroribeiro@hotmail.com>"]
license = "ICS"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.7,<3.14"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
dependency-injector = "^4.42.0"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
email-validator = "^2.2.0"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.29.0"
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
greenlet = "^3.1.1"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
factory-boy = "^3.3.1"
pyinstaller = "^6.11.0"
httpx = "^0.27.2"
testcontainers = {extras = ["postgres"], version = "^4.8.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
